--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bevy = {version = "*", features = ["dynamic_linking"]}
 bevy_hanabi = {git = "https://github.com/djeedai/bevy_hanabi", branch="main", default-features = true, features = [ "3d", "serde" ] }
+bevy_skein = "*"
 
 rand = "0.8.5"
 bevy-inspector-egui = {version = "*"}
@@ -17,5 +18,3 @@ opt-level = 1
 # High optimizations for depencencies
 [profile.dev.package."*"]
 opt-level = 3
-
-
